Default list render, sorting implementation, sorting options menu appears when hovering over icon, DOM functions in separate file, AI suggestions for sorting by title and normalizing dates

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,7 @@
     <div class="layout">
         <aside class="sidebar">
             <nav class="sidebar-content">
-                <ul id="todo-lists">
-                <li class="todo-list">
-                    <div class="todo-header">
-                        <a href="#">Default List</a>
-                        <button class="add-item">╋</button>
-                        <button class="sort">☰</button>
-                    </div>
-                    <ul class="todo-menu">
-                    <li><a href="#">Item A</a></li>
-                    <li><a href="#">Item B</a></li>
-                    </ul>
-                </li>
-                </ul>
+                <ul id="todo-lists"></ul>
             </nav>
 
             <footer class="sidebar-footer">
